tests/NormalTests/paczka1/small_fuzzy/15533600.err
Error in line 1: SQm S664 13,5
Error in line 3: DPa3Neab S664 94,0
